--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
+  // -apple-system,
+  font-family: "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
     "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
 }
