--- a/src/components/modal/CreateBookModal.scss
+++ b/src/components/modal/CreateBookModal.scss
@@ -4,6 +4,7 @@
 }
 
 .cfm-btn {
+  border: 0;
   background-color: rgb(206, 192, 148);
   padding: 0.4rem 0.6rem 0.3rem 0.6rem;
   border-radius: 0.375rem;
@@ -17,12 +18,17 @@
   padding: 0.4rem 0.6rem 0.3rem 0.6rem;
   border-radius: 0.375rem;
   font-weight: 600;
-  color: rgb(145, 145, 145);
+
+  background-color: rgb(247, 247, 247);
 }
 
 .cfm-btn:hover {
   background-color: rgb(233, 224, 194);
   cursor: pointer;
+}
+
+.cancel-font {
+  color: rgb(170, 170, 170);
 }
 
 .cancel-btn:hover {
