--- a/src/components/popover/BookSelectionPopover.scss
+++ b/src/components/popover/BookSelectionPopover.scss
@@ -109,4 +109,19 @@
   width: 100%;
   text-align: center;
   font-size: 14px;
+  display: flex;
+  align-items: center;
+  padding-left: 0.2rem;
+}
+
+.__popover-state-link {
+  margin-top: 0.1rem;
+  font-weight: 600;
+  color: $web-font-color;
+  font-size: 14px;
+}
+
+.__popover-state-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
