--- a/src/components/popover/SignUpPopover.scss
+++ b/src/components/popover/SignUpPopover.scss
@@ -168,9 +168,9 @@
 }
 
 #signup-loading-spinner {
-  height: 16px;
-  width: 16px;
-  font-size: 11px;
+  // height: 16px;
+  // width: 16px;
+  // font-size: 11px;
   margin-right: 0.3rem;
   color: $secondary-web-color;
 }
@@ -184,7 +184,7 @@
 #confirm-email-loading-spinner {
   height: 20px;
   width: 20px;
-  font-size: 11px;
+  font-size: 13px;
   margin-right: 0.3rem;
   color: $web-font-color;
 }
