--- a/src/components/wordDefinition/WordDefinition.scss
+++ b/src/components/wordDefinition/WordDefinition.scss
@@ -4,10 +4,7 @@
   border-radius: 0.5rem;
   margin-top: 3rem;
   border: 0.375px lightgrey solid;
-  padding-top: 0.4rem;
-  padding-bottom: 0.4rem;
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
+  padding: 0.4rem 0.8rem 0.4rem 0.8rem;
 }
 
 .abbreviation {
